welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:3: error: type mismatch;
 found   : Int(1)
 required: Nothing
  T(0)=1
       ^golomb:6: error: type mismatch;
 found   : i.type (with underlying type Int)
 required: Nothing
      T(i)=i
           ^